--- a/src/app/containers/layout/color-switcher/color-switcher.component.html
+++ b/src/app/containers/layout/color-switcher/color-switcher.component.html
@@ -27,5 +27,5 @@
     </div>
   </div>
 
-  <a (click)="toggleSwitcher($event)" class="c-pointer theme-button"> <i class="simple-icon-magic-wand"></i> </a>
+  <!-- <a (click)="toggleSwitcher($event)" class="c-pointer theme-button"> <i class="simple-icon-magic-wand"></i> </a> -->
 </div>
