--- a/src/app/views/home/home.component.scss
+++ b/src/app/views/home/home.component.scss
@@ -1,3 +1,9 @@
+
+.bannerText {
+    color: #000 !important;
+    font-size: 18px;
+    font-weight: 600;
+}
 .float-iframe-btn {
     position: fixed;
     width: 60px;
