--- a/src/app/containers/layout/footer/footer.component.html
+++ b/src/app/containers/layout/footer/footer.component.html
@@ -1,20 +1,28 @@
-  <footer class="page-footer">
-    <div class="footer-content">
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-12 col-sm-6">
-            <p class="mb-0 text-muted">ColoredStrategies 2020</p>
+  <footer class="footerSection">
+    <div class="">
+      <div class="container">
+        <div class="row align-item-center">
+          <div class="col-sm-6">
+            <ul class="d-flex align-items-center gap-5 p-0 footerLinks">
+              <li>
+                <a href="javascript:;">About Us</a>
+              </li>
+              <li>
+                <a href="javascript:;">Contact Us</a>
+              </li>
+            </ul>
           </div>
-          <div class="col-sm-6 d-none d-sm-block">
-            <ul class="breadcrumb pt-0 pr-0 float-right">
-              <li class="breadcrumb-item mb-0">
-                <a href="javascript:;" class="btn-link">Review</a>
+          <div class="col-sm-6">
+            <ul class="breadcrumbIcon">
+              <li class="mb-0">
+                <a href="javascript:;" class="btn-link">
+                  <img src="../../../assets/img/home page/google-play.svg" alt="PLAY STORE" class="img-store m-0 w-75">
+                </a>
               </li>
-              <li class="breadcrumb-item mb-0">
-                <a href="javascript:;" class="btn-link">Purchase</a>
-              </li>
-              <li class="breadcrumb-item mb-0">
-                <a href="javascript:;" class="btn-link">Docs</a>
+              <li class="mb-0">
+                <a href="javascript:;" class="btn-link">
+                  <img src="../../../assets/img/home page/apple-store-logo.png" alt="PLAY STORE" class="img-store m-0">
+                </a>
               </li>
             </ul>
           </div>
