--- a/src/app/views/app/app.component.html
+++ b/src/app/views/app/app.component.html
@@ -22,6 +22,7 @@
   <main>
     <div class="container-fluid">
       <router-outlet></router-outlet>
+      <app-footer></app-footer>
     </div>
   </main>
 </div>
